<resources>
    <string name="app_name">Sharebook</string>
    <string name="presiona">Presiona</string>
    <string name="menu">Menu</string>
    <string name="busqueda">buscar</string>
    <string name="titulo">titulo</string>
    <string name="mi_perfil">mi perfil</string>
    <string name="mis_libros">mis libros</string>
    <string name="prestados">prestados</string>
    <string name="cambiar_contrasenia">CAmbiar Contraseña</string>
    <string name="libros_deseados">libros deseados</string>
    <string name="autor">autor</string>
    <string name="nombre">Nombre</string>
    <string name="Contraseña">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="preferencias">Preferencias</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="intentos">Numero de Intentos ntentos</string>
    <string name="usuario">usser</string>
    <string name="contrasenia">1234</string>

</resources>
