<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPerfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/nombre_de_perfil"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/nombre_edit"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/nombre" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/apellido_de_perfil"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellido"/>
"
            <EditText
                android:id="@+id/apellido_edit"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/apellido" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/edad_de_perfil"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edad" />

            <EditText
                android:id="@+id/edad_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:hint="@string/edad"
                android:inputType="number"
                android:maxLength="2"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/ubicacion_de_perfil"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ubicacion" />

            <EditText
                android:id="@+id/ubicacion_edit"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/ubicacion" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/preferencia_de_perfil"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferencias" />

            <EditText
                android:id="@+id/preferencia_edit"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/preferencias" />

        </LinearLayout>


        <Button
            android:text="@string/editar_perfil"
            android:layout_marginStart="20dp"
            android:id="@+id/boton_editar_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="actualizar_perfil"
            android:layout_marginStart="20dp"
            android:id="@+id/actualizar_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/prueba_base_de_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="prueba" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>